并没有什么很大的改变
并没有什么很大的改变

--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="https://xucc.github.io/index.html">主页</a></li>
+            <li role="presentation"><a href="https://xucc.github.io/index.html">主页</a></li>
 			<li role="presentation"><a href="https://xucc.github.io/#">乱七八糟</a></li>
-            <li role="presentation"><a href="https://xucc.github.io/about.html">关于我</a></li>
+            <li role="presentation" class="active"><a href="https://xucc.github.io/about.html">关于</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">破烂的网站</h3>
