--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="https://xucc.github.io/index.html">主页</a></li>
-			<li role="presentation"><a href="https://xucc.github.io/#">乱七八糟</a></li>
+			<li role="presentation"><a href="https://xucc.github.io/l7.html">乱七八糟</a></li>
             <li role="presentation"><a href="https://xucc.github.io/about.html">关于</a></li>
           </ul>
         </nav>
