为进一步探索做准备
以后将是光明的前程

--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
 
       <div class="row marketing">
 		<h2>关于</h2>
-		<p>垃圾做的破烂网站，能写点什么？</p>
+		<p>垃圾做的破烂网站，能写点什么？（要看再看一遍主页）</p>
 	  </div>
 
       <footer class="footer">
-        <p>&copy; 2014~2016 垃圾</p>
+        <p>&copy; 2014~2017 垃圾</p>
       </footer>
 	  
     </div>
