变化大了肯定有问题
对主页的小调整

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 		<h2>我的项目</h2>
         <div class="col-lg-6">
           <h4>most-powerful</h4>
-          <p>https://github.com/xucc/most-powerful</p>
+          <a href="https://github.com/xucc/most-powerful">不打开看看嘛？</a>
 
-          <h4>暂无</h4>
+          <h4>下面没了</h4>
           <p>……</p>
 
-          <h4>暂无/h4>
+          <h4>暂无</h4>
           <p>…………</p>
         </div>
       </div>
